--- a/public/frontend/css/styles.css
+++ b/public/frontend/css/styles.css
@@ -590,7 +590,7 @@ input[type="checkbox"] {
     padding: 3.125rem 1rem 2.125rem 1rem;
     border: none;
     border-radius: 16px;
-    background-color: #60a5fa;
+    /* background-color: #60a5fa; */
 }
 
 .cards-1 .card-image {
